added parallel exec plugin